--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.11",
+    "@lottiefiles/react-lottie-player": "^3.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.2.6",
     "graphql": "^15.5.0",
     "lodash.get": "^4.4.2",
+    "lottie-react": "^2.1.0",
+    "lottie-web": "^5.7.6",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "query-string": "^6.14.1",
